[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.pixi.project]
name = "stable-audio-tools"
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = "3.11.*"

[tool.pixi.pypi-dependencies]
stable-audio-tools = { path = ".", editable = true }

[tool.pixi.tasks]
